Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: three-tier
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      # Route 1: Backend API Traffic
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 3500
      # Route 2: Frontend UI Traffic
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 3000
